Fixed CI/CD and changed world alignment

--- a/client/src/components/Intro/Intro.css
+++ b/client/src/components/Intro/Intro.css
@@ -17,7 +17,9 @@
 @media screen and (max-width: 700px) {
     .intro {
         margin-top: 2rem;
-        padding: 0.5rem 3rem;
+        margin-left: 2.5rem;
+        margin-right: 0rem;
+        padding-left: 0rem;
         float: left;
     }
     
