--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -65,5 +65,12 @@
         margin-top: 3rem;
         padding: 0.5rem 3rem;
     }
+
+    .button_start_wrapper {
+        margin-top: 1rem;
+        display: flex;
+        justify-content: center;
+    }
+
   }
   
