--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -86,6 +86,6 @@ a:hover {
 
 @media screen and (max-width: 700px) {
     .navbar {
-        padding: 2rem 4rem;
+        padding: 2rem 1rem;
     }
 }
